# plactic_monoid_project

./: .Read.me.swp  .gitignore  Cargo.toml  README.md  challenge_lifting_230220_0732.txt  challenge_lifting_230220_1849.txt  challenge_lifting_230220_1909.txt  resultat.txt
Division_by_trial_multiplication/: Cargo.toml  division_by_trial  division_by_trial.rs
Division_by_trial_multiplication/src/: main.rs
code_monico/: placdiv.c  placdiv_challenge.txt  plcdiv
cr_reunions/2022_12_01/: 221201.aux  221201.tex
cr_reunions/2022_12_15/: 20221215.tex
cr_reunions/2023_01_06/: 20221215.tex
implementation/src/: erousion.rs  main.rs  monico.rs  tab.rs
rapport/: .gitignore  Makefile  chap1.tex  chap2.tex  chap3.tex  macros.tex  main.tex  packages.tex  refs.bib
src/: main.rs  monico.rs  tab.rs
