[package]
name = "plactic-monoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"

[profile.release]
lto = true
codegen-units = 1